Fixed skill list vertical spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1324,7 +1324,7 @@
   .skills {
     width: 33.3%;
     list-style-type: none;
-    line-height: 40px;
+    line-height: 60px;
   }
 
   .skills-image {
